--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fastify/autoload": "^5.0.0",
     "@fastify/sensible": "^5.0.0",
     "@fastify/swagger": "^8.2.1",
+    "@fastify/swagger-ui": "^1.3.0",
     "fastify": "^4.0.0",
     "fastify-cli": "^5.7.1",
     "fastify-plugin": "^4.0.0"
