--- a/config.json.example
+++ b/config.json.example
@@ -1,12 +1,14 @@
 {
     "mapPath": "/maps/ssp/",
-    "paths": {
+    "sitePaths": {
         "audio": "/maps/audio/",
         "download": "/maps/download/",
         "cover": "/maps/cover/",
         "txt": "/maps/txt/"
     },
-    "host": "localhost",
-    "port": "3000",
+    "serve": {
+        "host": "localhost",
+        "port": "3000"
+    },
     "trustProxy": false
 }
