--- a/config.json.example
+++ b/config.json.example
@@ -1,14 +1,10 @@
 {
     "mapPath": "/maps/ssp/",
-    "sitePaths": {
+    "siteRoutes": {
         "audio": "/maps/audio/",
         "download": "/maps/download/",
         "cover": "/maps/cover/",
         "txt": "/maps/txt/"
-    },
-    "serve": {
-        "host": "localhost",
-        "port": "3000"
     },
     "trustProxy": false
 }
