feat(api): add /api/all route

--- a/config.json.example
+++ b/config.json.example
@@ -6,5 +6,6 @@
         "cover": "/maps/cover/",
         "txt": "/maps/txt/"
     },
-    "trustProxy": false
+    "trustProxy": false,
+    "domain": "http://localhost:3000"
 }
