--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "scripts": {
+    "test": "npm run build:ts && tsc -p test/tsconfig.json && tap --no-timeout --ts \"test/**/*.test.ts\"",
     "start": "npm run build:ts && fastify start -c config-fastify.json -l info dist/src/app.js",
     "build:ts": "tsc",
     "watch:ts": "tsc -w",
@@ -18,6 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "@fastify/autoload": "^5.0.0",
+    "@fastify/rate-limit": "^7.6.0",
     "@fastify/sensible": "^5.0.0",
     "fastify": "^4.0.0",
     "fastify-cli": "^5.7.1",
